--- a/inventry/index.html
+++ b/inventry/index.html
@@ -10,5 +10,7 @@
         <script src = "scripts\modules\home\usersignup.js"></script>
         <script src = "scripts\modules\home\profile.js"></script>
         <script src = "scripts\modules\home\user.js"></script>
+        <script src = "scripts\modules\home\products.js"></script>
+        <script src = "scripts\modules\home\newproduct.js"></script>
     </body>
 </html>
