--- a/inventry/index.html
+++ b/inventry/index.html
@@ -11,6 +11,7 @@
         <script src = "scripts\modules\home\profile.js"></script>
         <script src = "scripts\modules\home\user.js"></script>
         <script src = "scripts\modules\home\products.js"></script>
+        <script src = "scripts\modules\home\order.js"></script>
         <script src = "scripts\modules\home\newproduct.js"></script>
     </body>
 </html>
